fix: for java 17